fix: Footer overlapping with total row for query and script reports

--- a/frappe/public/scss/desk/report.scss
+++ b/frappe/public/scss/desk/report.scss
@@ -95,7 +95,7 @@
 		height: calc(100vh - var(--report-filter-height) - 205px);
 
 		.dt-scrollable {
-			height: calc(100vh - var(--report-filter-height) - 275px);
+			height: calc(100vh - var(--report-filter-height) - 310px);
 		}
 	}
 }
